# dbdrill

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
docs/: dbdrill.toml  sample-db.sql
src/: json_helpers.rs  main.rs  model.rs  sql_value_as_string.rs  to_sql.rs  tui.rs
