[package]
name = "dbdrill"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
cursive = "0.21.1"
cursive_table_view = "0.15.0"
jiff = "0.1.29"
postgres = { version = "0.19.10", features = ["with-jiff-0_1", "with-serde_json-1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9.2"
