[package]
name = "dbdrill"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive", "env"] }
cursive = "0.21.1"
cursive_table_view = "0.15.0"
jiff = "0.2.15"
jsonpath-rust = "1.0.4"
native-tls = "0.2.14"
postgres = { version = "0.19.11", features = ["with-jiff-0_2", "with-serde_json-1"] }
postgres-native-tls = "0.5.2"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.7"
